src/objects/Request_for_Information__c.object
<CustomObject>
    <fields>
        <fullName>BWC_Review_Responses_Due__c</fullName>
        <label>BWC Review Responses Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engineer_Review__c</fullName>
        <label>Engineer Review</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Review_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Review Requested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow-Up Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Review_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Review Requested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provided_By__c</fullName>
        <label>Provided By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provided_On__c</fullName>
        <label>Provided On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFI_No__c</fullName>
        <label>RFI No</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Requested_By__c</fullName>
        <label>Response Requested By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Impact</label>
        <type>Checkbox</type>
    </fields>
    <label>Request for Information</label>
    <nameField>
        <label>RFI Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests for Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>